--- a/iTransitionTask3/iTransitionTask3.csproj
+++ b/iTransitionTask3/iTransitionTask3.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ConsoleTables, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ConsoleTables.2.4.2\lib\net40\ConsoleTables.dll</HintPath>
+    </Reference>
     <Reference Include="Hmac, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hmac.2.0.0\lib\net45\Hmac.dll</HintPath>
     </Reference>
@@ -90,6 +93,7 @@
   <ItemGroup>
     <Compile Include="GameResult.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Help.cs" />
     <Compile Include="TurnHMAC.cs" />
     <Compile Include="Turn.cs" />
     <Compile Include="Program.cs" />
