--- a/iTransitionTask3/packages.config
+++ b/iTransitionTask3/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConsoleTables" version="2.4.2" targetFramework="net472" />
   <package id="Hmac" version="2.0.0" targetFramework="net472" />
   <package id="Inferno" version="1.6.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
